...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/profile_subscription_settings_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
...
            android:id="@+id/profile_sub_settings_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false">

            <RadioButton
                android:id="@+id/profile_subscription_settings_weekly_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly_radioButton"
                android:checked="true"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/profile_subscription_settings_biweekly_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biweekly_radioButton"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/profile_subscription_settings_monthly_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_radioButton"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/profile_subscription_settings_bimonthly_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bimonthly_radioButton"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/profile_subscription_settings_trimonthly_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trimonthly_radioButton"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/profile_subscription_settings_halfyear_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/halfyear_radioButton"
                android:enabled="false"/>


...
            android:layout_alignParentEnd="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">
                <TextView
                    android:id="@+id/profile_sub_settings_weekly_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_weekly_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/profile_sub_settings_biweekly_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_biweekly_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/profile_sub_settings_monthly_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_monthly_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/profile_sub_settings_bimonthly_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_bimonthly_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/profile_sub_settings_trimonthly_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_trimonthly_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/profile_sub_settings_halfyear_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_halfyear_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
...
        android:id="@+id/profile_sub_settings_edit_rel_layout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/profile_sub_settings_edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_green_24dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
...
