...

    <TextView
        android:id="@+id/profile_payment_info_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_card_type_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                            <RadioButton
                                android:id="@+id/profile_payment_credit_card_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <RadioButton
                                android:id="@+id/profile_payment_debit_card_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_card_company_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/profile_payment_card_company_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_nameOnCard_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/profile_payment_nameOnCard_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_cardnumber_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/profile_payment_cardnumber_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_security_code_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/profile_payment_security_code_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_payment_expiration_date_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

        <ImageView
            android:id="@+id/profile_payment_info_edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
