...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/profile_username_preview_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
...


                </RelativeLayout>

                <!-->phone number<-->
                <RelativeLayout
                    android:id="@+id/profile_phone_number_rel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/profile_phone_number_preview_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
...
                    </LinearLayout>

                </RelativeLayout>

                <!-->subscriptions<-->
                <RelativeLayout
                    android:id="@+id/profile_subscriptions_settings_rel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <TextView
                                android:id="@+id/profile_subscription_settings_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subscription_settings"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:layout_centerVertical="true" />
...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/profile_sub_settings_choice_preview_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
...
                    </LinearLayout>

                </RelativeLayout>

                <!-->shipping<-->
                <RelativeLayout
                    android:id="@+id/profile_shipping_info_rel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
...
                    </LinearLayout>

                </RelativeLayout>

                <!-->billing<-->
                <RelativeLayout
                    android:id="@+id/profile_billing_info_rel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
...
                    </LinearLayout>

                </RelativeLayout>

                <!-->payment<-->
                <RelativeLayout
                    android:id="@+id/profile_payment_info_rel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/payment_info_card_type_preview_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/business_verified_preview_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
...

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/profile_sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_sign_out_button"
            android:textColor="@color/white"
            android:background="@color/signoutButton"
            android:layout_alignParentBottom="true" />
...
