...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/profile_billing_info_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billing_info"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
...
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">


                        <EditText
                            android:id="@+id/profile_billing_first_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_first_name"
                            android:enabled="false"/>

                    </LinearLayout>
...
                        android:orientation="vertical"
                        android:layout_weight="1">



                        <EditText
                            android:id="@+id/profile_billing_last_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_last_name"
                            android:enabled="false"/>

                    </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_street_address1_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address1"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_street_address2_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_street_address2"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/profile_billing_city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_city_town"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_state_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_state_province"
                        android:layout_weight="1"
                        android:enabled="false"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/profile_billing_country_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_country"
                        android:layout_weight="1"
                        android:enabled="false" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/profile_billing_zipcode_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="5"
                        android:hint="@string/profile_zip_code"
                        android:layout_weight="1"
...
        android:id="@+id/profile_billing_info_edit_rel_layout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/profile_billing_info_edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_green_24dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
...
